# firetruck

./: README.md  pyproject.toml
firetruck/: __init__.py  compact.py  plots.py
numfire/: __init__.py  compact.py
